care/force-app/main/default/objects/Regulation__c/fields/Types_of_Assisted_Living_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Types_of_Assisted_Living_Licenses__c</fullName>
    <inlineHelpText>(i.e. Personal Care Home)</inlineHelpText>
    <label>Types of Assisted Living Licenses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>