care/force-app/main/default/objects/Regulation__c/fields/Types_of_Caregivers__c.field-meta.xml
<CustomField>
    <fullName>Types_of_Caregivers__c</fullName>
    <inlineHelpText>HHAs, PCAs, CNAs, etc.</inlineHelpText>
    <label>Types of Caregivers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>