care/force-app/main/default/objects/Regulation__c/fields/Types_of_Home_Care_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Types_of_Home_Care_Licenses__c</fullName>
    <label>Types of Home Care Licenses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>