care/force-app/main/default/objects/Regulation__c/fields/Types_of_Home_Modification_License__c.field-meta.xml
<CustomField>
    <fullName>Types_of_Home_Modification_License__c</fullName>
    <inlineHelpText>Types of Licenses</inlineHelpText>
    <label>Types of Home Modification License</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>