care/force-app/main/default/objects/Regulation__c/fields/Used_Durable_Medical_Equipment_Link__c.field-meta.xml
<CustomField>
    <fullName>Used_Durable_Medical_Equipment_Link__c</fullName>
    <inlineHelpText>State&apos;s Used Durable Medical Equipment Link</inlineHelpText>
    <label>Used Durable Medical Equipment Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>