care/force-app/main/default/objects/Regulation__c/fields/Vet_Justice_Outreach_Homeless_Vet_Link__c.field-meta.xml
<CustomField>
    <fullName>Vet_Justice_Outreach_Homeless_Vet_Link__c</fullName>
    <inlineHelpText>Veterans Justice Outreach - Homeless Veterans Link</inlineHelpText>
    <label>Vet. Justice Outreach-Homeless Vet. Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>