care/force-app/main/default/objects/Regulation__c/fields/Veteran_s_Benefits_Info__c.field-meta.xml
<CustomField>
    <fullName>Veteran_s_Benefits_Info__c</fullName>
    <label>Veteran&apos;s Benefits Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>