care/force-app/main/default/objects/Regulation__c/fields/Veteran_s_Benefits_Link__c.field-meta.xml
<CustomField>
    <fullName>Veteran_s_Benefits_Link__c</fullName>
    <label>Veteran&apos;s Benefits Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>