care/force-app/main/default/objects/Regulation__c/fields/Veterans_Pro_Bono_Resources_Links__c.field-meta.xml
<CustomField>
    <fullName>Veterans_Pro_Bono_Resources_Links__c</fullName>
    <label>Veterans Pro Bono Resources Links</label>
    <length>255</length>
    <type>Text</type>
</CustomField>