care/force-app/main/default/objects/Regulation__c/recordTypes/SC_US_State_Profile.recordType-meta.xml
<RecordType>
    <fullName>SC_US_State_Profile</fullName>
    <active>true</active>
    <label>SC US State Profile</label>
</RecordType>